add responsive container v1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <div id="container"></div>
+    <!-- <div id="container"></div> -->
     <div id="bestcustomer"></div>
     <script src="../dist/index.js"></script>
   </body>
