--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <body>
     <div id="container"></div>
     <div id="bestcustomer"></div>
-    <script src="../dist/index.js"></script>
+    <script src="./dist/index.js"></script>
   </body>
 </html>
